--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "postinstall": "bower i",
-     "test": "TESTING=true mocha ./test/** -R landing"
+    "test": "TESTING=true mocha ./test/** -R landing"
   },
   "engines": {
     "node": "5.11.1"
@@ -13,15 +13,20 @@
   "dependencies": {
     "body-parser": "~1.13.2",
     "bower": "^1.7.9",
+    "chai": "^3.5.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "karma": "^0.13.22",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-mocha": "^1.0.1",
+    "mocha": "^2.4.5",
     "mongoose": "^4.4.17",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
-    "chai": "^3.5.0",
     "supertest": "^1.2.0"
   }
 }
