--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "angular": "^1.5.5",
     "angular-mocks": "^1.5.5",
-    "angular-ui-router": "^0.3.0"
+    "angular-ui-router": "^0.3.0",
+    "semantic": "semantic-ui#^2.1.8"
   }
 }
